--- a/src/index.html
+++ b/src/index.html
@@ -2,6 +2,8 @@
 <html>
     <head>
         <title>Hangman</title>
+        <meta charset="UTF-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <link rel="stylesheet" media="screen" href="/styles/style.css" />
         <link href="/images/favicon.png" rel="icon" />
     </head>
