--- a/public/index.html
+++ b/public/index.html
@@ -1,56 +1,1 @@
-
-<!DOCTYPE html>
-<html>
-    <head>
-        <title>Hangman</title>
-        <link rel="stylesheet" media="screen" href="./styles/style.css" />
-        <link href="./images/favicon.png" rel="icon" />
-    </head>
-    <body>
-        <div class="container">
-            <header class="header">
-                <h1>Hangman Game</h1>
-            </header>
-            <div class="puzzle" id="puzzle"></div>
-            <article id="guessed">
-                <header>Available letters</header>
-                <div class="alphabet">
-                    <a href="#">A</a>
-                    <a href="#">B</a>
-                    <a href="#">C</a>
-                    <a href="#">D</a>
-                    <a href="#">E</a>
-                    <a href="#">F</a>
-                    <a href="#">G</a>
-                    <a href="#">H</a>
-                    <a href="#">I</a>
-                    <a href="#">J</a>
-                    <a href="#">K</a>
-                    <a href="#">L</a>
-                    <a href="#">M</a>
-                    <a href="#">N</a>
-                    <a href="#">O</a>
-                    <a href="#">P</a>
-                    <a href="#">Q</a>
-                    <a href="#">R</a>
-                    <a href="#">S</a>
-                    <a href="#">T</a>
-                    <a href="#">U</a>
-                    <a href="#">V</a>
-                    <a href="#">W</a>
-                    <a href="#">X</a>
-                    <a href="#">Y</a>
-                    <a href="#">Z</a>
-                </div>
-            </article>
-            <footer>
-                <p id="guesses"></p>
-                <button class="button" id="reset">Reset</button>
-            </footer>
-            
-            
-        </div>
-
-        <script src="./scripts/bundle.js"></script>
-    </body>
-</html>
+<!doctype html><html><head><title>Hangman App</title><meta charset="UTF-8"><meta name="viewport" content="width=device-width,initial-scale=1"><link href="/images/favicon.png" rel="icon"/><script defer="defer" src="bundle.js"></script></head><body><article><h1>Hangman App</h1><br><br><div class="puzzle" id="puzzle"></div><article id="guessed"><header>Available letters</header><div class="alphabet"><a href="#"><span>A</span></a> <a href="#"><span>B</span></a> <a href="#"><span>C</span></a> <a href="#"><span>D</span></a> <a href="#"><span>E</span></a> <a href="#"><span>F</span></a> <a href="#"><span>G</span></a> <a href="#"><span>H</span></a> <a href="#"><span>I</span></a> <a href="#"><span>J</span></a> <a href="#"><span>K</span></a> <a href="#"><span>L</span></a> <a href="#"><span>M</span></a> <a href="#"><span>N</span></a> <a href="#"><span>O</span></a> <a href="#"><span>P</span></a> <a href="#"><span>Q</span></a> <a href="#"><span>R</span></a> <a href="#"><span>S</span></a> <a href="#"><span>T</span></a> <a href="#"><span>U</span></a> <a href="#"><span>V</span></a> <a href="#"><span>W</span></a> <a href="#"><span>X</span></a> <a href="#"><span>Y</span></a> <a href="#"><span>Z</span></a></div></article><footer><div class="guesses-container"><p id="guesses"></p></div><div class="button-container"><button class="button" id="reset">Reset</button></div></footer></article></body></html>
